# prepare-quran-dataset

./: .env.example  .gitignore  Dockerfile  README.md  add_imlaey_uthmani_cols.py  add_phonetic_script_and_push_ds_to_hub.py  add_timestamp_column.py  annotate_real_streamlit_app.py  apply_edits.py  build_vocab.py  build_vocab_streaming.py  check_duplicate_ids.py  edit_config.yml  edit_config_13.0.yml  edit_config_4.0.yml  edit_config_v1.yml  edit_config_v3.yml  edit_config_v4.yml  edit_config_v5.yml  export_rnn_streaming_to_litert.py  fix_13_0.py  fix_4_0.py  fix_missing_sura.py  fix_padding.py  fix_qdat_metadata.py  fixed_qdata_metada.csv  gather_transcript_stats.py  generate_moshaf_docs.py  hafs_ways.md  load_all_splits.py  multi_level_ctc_model  plot_trans_lens.py  prune_w2v2_width.py  push custom_model_to_hf.py  push_checkpoint_to_hf_hub.py  pyproject.toml  qdata_fix.md  register_custom_model_to_hf.py  segment_transcribe_hf.py  segment_transcripe_hf.py  (+15 more)
app/: streamlit_app.py
assets/: audio_lens.json  freesound_selected_tags.json  lens.json  trans_lens.json
configs/edit/: edit_config_v2.yml
configs/train/offline/: train_config.yml  train_config_w2v2_384_tp.yml  train_config_whisper_enc_small.yml
configs/train/streaming/: train_config.yml  train_config_v1.yml  train_config_v2.yml  train_config_v3.yml
docs/: index.html
frontend/: config.py  menu.py  requirements.txt  streamlit_app.py  streamlit_app_new.py  utils.py
frontend/pages/: download_page.py  from_zekr_page.py  get_moshaf_links_page.py  insert_moshaf_page.py  insert_reciter_page.py  play_recitations_page.py  update_moshaf_page.py  update_reciter_page.py  view_moshaf_pool_page.py  view_reciters_page.py
hpc-scripts/: app.sh  cont_annotate.sh  dl_benchmark.sh  load_all_splits.sh
resutls/: muaalem-model-v3_0_predictions.jsonl  muaalem-model-v3_1_predictions.jsonl  muaalem-model-v3_2_predictions.jsonl  test_results_last_ckp.json
src/prepare_quran_dataset/: hf_dataset_config.py
src/prepare_quran_dataset/annotate/: edit.py  main.py  tarteel.py  utils.py
src/prepare_quran_dataset/construct/: base.py  data_classes.py  database.py  database_utils.py  docs_utils.py  quran_data_utils.py  utils.py
src/prepare_quran_dataset/modeling/: modeling_multi_level_ctc.py  multi_level_tokenizer.py  vocab.py
src/prepare_quran_dataset/modeling_streaming_rnn/: configuration_rnn_streaming_multi_level_ctc.py  inference.py  modeling_rnn_streaming_multi_level_ctc.py  multi_level_tokenizer.py  vocab.py
src/prepare_quran_dataset/modeling_w2v/: configuration_multi_level_ctc_w2v.py  modeling_multi_level_ctc_w2v.py
src/prepare_quran_dataset/modeling_whisper/: __init__.py  configuration_for_multi_level_ctc.py  modeling_multi_level_ctc_whisper_encoder.py
tests/: app_streaming_inference.py  audiofile_info.py  correct_file_extention.py  count_noise_ds_hours.py  ctc_per_calc.py  database.py  database_unittest.py  debug_explosion_modeling_streaming_rnn.py  debug_phonetic_script.py  debug_wav2vec2_bert_processor.py  deduce_filename.py  download.py  download_benchmark.py  download_moshaf.py  download_multi.py  edit_pytest.py  extract_features.py  extract_zipfile.py  get_standard_sura_name.py  get_suar_from_archive.py  get_suar_from_mp3quran.py  get_suar_from_zekr.py  hf_dataset_builder.py  load_segment_intervals_from_cache.py  mix_noise_sample.py  online_file_read_st.py  plot_schedulers.py  read_audio_file_metadata.py  read_hf_annoteted_ds.py  read_hf_dataset.py  tarteel_api.py  tarteel_pytest.py  test_alighnment.py  test_chunk_streaming_offline.py  test_ctc_loss_with_zero_len_targets.py  test_custom_tokenizer.py  test_fastconformer_cache_aware_streaming.py  test_inference.py  test_load_gemma4_encoder.py  test_load_omnilingual_encoder_300.py  (+12 more)
vocab_streaming/: vocab.json
