# main docs of setup tools: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# pypip tutoral: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Video Tutorial: https://www.youtube.com/watch?v=v6tALyc4C10
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
include-package-data = true # to include data directories

[project]
name = "prepare-quran-dataset"
version = "1.0.0"
authors = [
  { name="Abdullah Aml", email="abdullahamlyossef@gmail.com" },
]
description = "Downloading and Processing Quran Recitaion of the Holy Quran"
readme = "README.md"
dependencies = [
  "pypdl==1.4.4",
  "tqdm",
  "pydantic==2.10.2",
  "datasets==3.3.2",
  "pyarrow>=20.0.0",
  "mutagen==1.47.0",
  "quran-transcript @ git+https://github.com/obadx/quran-transcript.git",
  "beautifulsoup4==4.12.3",
  "filetype==1.2.0",
  "ruamel.yaml==0.18.6", # It has duplicate key validation in a dict structure
  "huggingface_hub",
  "pyyaml",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Optional dependencies
[project.optional-dependencies]

test = [
  "pytest",
]

annotate = [
  "openai==1.82.0",
  "librosa==0.11.0",
  "soundfile",
  "torch>=2.6.0",
  "torchaudio",
  "recitations-segmenter==1.0.0",
  "transformers",
  "submitit==1.5.3",
  "stamina",
  "protobuf==6.31.1",
  "phonemizer",
  "wandb",
  "python-dotenv",
  "plotly",
  "audiomentations>=0.42.0",
  "Levenshtein>=0.27.1",
]

[project.urls]
Homepage = "https://github.com/obadx/prepare-quran-dataset"
Issues = "https://github.com/obadx/prepare-quran-dataset/issues"

# # for addint data: https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
quran_transcript = ["data/*"]
